add profile image upload and spinner

--- a/src/styles/container.css
+++ b/src/styles/container.css
@@ -37,7 +37,7 @@ span.navbar-text {
 }
 
 .dropdown-menu a:active {
-	background-color: #526772;
+	background-color: #8fa0aa;
 }
 
 @media only screen and (max-width: 400px) {
