--- a/src/styles/container.css
+++ b/src/styles/container.css
@@ -1,9 +1,19 @@
 .main-container {
-	height: 100vh;
+	height: calc(100vh - 56px);
 	width: 100vw;
 	padding: 0;
+
 	/* background-color: #a5d6eb; */
 	background-color: rgb(219, 225, 250);
+}
+
+.navbar .container-fluid {
+	margin: 0 !important;
+}
+
+.navbar-collapse {
+	width: 100% !important;
+	margin: 0;
 }
 
 .main-container .navbar {
@@ -18,8 +28,15 @@
 	margin-right: 3rem;
 }
 
+.navbar {
+	z-index: 1000;
+	position: absolute !important;
+	width: 100vw;
+}
+
 .navbar-brand {
 	margin-right: 2.5rem !important;
+	margin-left: 1rem;
 }
 
 span.navbar-text,
@@ -45,9 +62,105 @@ span.navbar-text {
 	background-color: #c9c9c9;
 }
 
+.main-outlet {
+	margin-top: 56px;
+	height: calc(100vh - 56px);
+	overflow-y: overlay;
+}
+
+.user-search-container {
+	margin-right: 5rem;
+}
+
+.user-search-input {
+	padding: 0.2rem 1rem;
+	color: white;
+	background-color: #2b3c46;
+	border: 1px solid rgb(224, 224, 224);
+	border-radius: 1rem;
+	transition: all 0.1s;
+}
+
+::placeholder {
+	color: rgb(224, 224, 224);
+}
+
+:-ms-input-placeholder {
+	color: rgb(224, 224, 224);
+}
+
+::-ms-input-placeholder {
+	color: rgb(224, 224, 224);
+}
+
+.user-search-input:focus-visible {
+	outline: 1px solid white;
+}
+
+.user-search-list {
+	z-index: 200;
+	max-height: 50vh;
+	background-color: white;
+	position: absolute;
+	min-width: 18rem;
+	width: fit-content;
+	border-radius: 0.5rem;
+	box-shadow: 0 0 0.2rem rgb(91, 91, 91);
+	overflow-y: overlay;
+	overflow-x: hidden;
+}
+
+.search-result-user {
+	width: fit-content;
+	cursor: pointer;
+	padding-left: 0.4rem !important;
+	padding-right: 0.4rem !important;
+}
+
+.search-result-user:hover {
+	background-color: rgb(234, 234, 234);
+}
+
+.search-result-user:active {
+	background-color: rgb(214, 214, 214);
+}
+
+.user-search-list {
+	margin: 0;
+}
+
 @media only screen and (max-width: 400px) {
 	.main-container .navbar .container-fluid {
 		margin-left: 0.5rem;
 		margin-right: 0.5rem;
 	}
+}
+
+@media only screen and (max-width: 990px) {
+	.user-search-container {
+		margin-top: 1rem;
+		margin-bottom: 1rem;
+	}
+}
+
+::-webkit-scrollbar {
+	width: 0.5rem;
+	position: absolute;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px grey;
+	border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: rgba(0, 0, 0, 0.245);
+	border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #0000006f;
 }
