--- a/src/styles/container.css
+++ b/src/styles/container.css
@@ -65,6 +65,7 @@ span.navbar-text {
 .main-outlet {
 	margin-top: 56px;
 	height: calc(100vh - 56px);
+	overflow-y: scroll;
 	overflow-y: overlay;
 }
 
@@ -106,6 +107,7 @@ span.navbar-text {
 	width: fit-content;
 	border-radius: 0.5rem;
 	box-shadow: 0 0 0.2rem rgb(91, 91, 91);
+	overflow-y: scroll;
 	overflow-y: overlay;
 	overflow-x: hidden;
 }
